added solution,statefulsets,services,deployment apis
